name:              yesodcms
version:           0.0.0
license:           BSD3
license-file:      LICENSE
author:            Michael Snoyman
maintainer:        Michael Snoyman
synopsis:          The greatest Yesod web application ever.
description:       I'm sure you can say something clever here if you try.
category:          Web
stability:         Experimental
cabal-version:     >= 1.6
build-type:        Simple
homepage:          http://yesodcms.yesodweb.com/

Flag production
    Description:   Build the production executable.
    Default:       False

Flag devel
    Description:   Build for use with "yesod devel"
    Default:       False

library
    if flag(devel)
        Buildable: True
    else
        Buildable: False

    if os(windows)
        cpp-options: -DWINDOWS

    hs-source-dirs: .
    exposed-modules: Application
    other-modules:   Foundation
                     Model
                     Settings
                     Settings.StaticFiles
                     FormatHandler
                     FormatHandler.Text
                     FormatHandler.Markdown
                     FormatHandler.Html
                     FormatHandler.DITA
                     FileStore
                     Handler.Root
                     Handler.Wiki
                     Handler.EditPage
                     Handler.UserFile
                     Handler.Profile
                     Handler.Page
                     Handler.Comments
                     Handler.Feed
                     Handler.Blog
                     Handler.Search
    ghc-options:   -Wall -threaded -O0 -Werror

executable         yesodcms
    if flag(devel)
        Buildable: False

    if flag(production)
        cpp-options:   -DPRODUCTION
        ghc-options:   -Wall -threaded -O2
    else
        ghc-options:   -Wall -threaded -O0 -Werror

    if os(windows)
        cpp-options: -DWINDOWS

    main-is:       main.hs
    hs-source-dirs: .

    build-depends: base         >= 4       && < 5
                 , yesod        >= 0.9     && < 0.10
                 , yesod-core   >= 0.9.3
                 , yesod-auth   >= 0.7.3
                 , yesod-static >= 0.3.1
                 , yesod-default
                 , blaze-html
                 , yesod-form   >= 0.3.3
                 , mime-mail
                 , clientsession
                 , wai-extra
                 , directory
                 , bytestring
                 , text
                 , persistent
                 , persistent-template
                 , persistent-postgresql >= 0.6 && < 0.7
                 , template-haskell
                 , hamlet               >= 0.10     && < 0.11
                 , shakespeare-css      >= 0.10     && < 0.11
                 , shakespeare-js       >= 0.10     && < 0.11
                 , shakespeare-text     >= 0.10     && < 0.11
                 , hjsmin
                 , transformers
                 , data-object
                 , data-object-yaml
                 , warp
                 , blaze-builder
                 , cmdargs
                 , containers
                 , enumerator
                 , system-filepath
                 , system-fileio
                 , xss-sanitize
                 , uri-enumerator       >= 0.0      && < 0.1
                 , dita
                 , xml-enumerator       >= 0.4.2    && < 0.5
                 , xml2html
                 , xml-catalog          >= 0.2      && < 0.3
                 , dtd                  >= 0.0      && < 0.1
                 , http-types
                 , xml-hamlet
                 , spoon
                 , zip-archive
                 , time
                 , wai
                 , aeson-native
                 , vector
                 , old-locale
                 , yesod-goodies        >= 0.0.5
                 , yesod-newsfeed
                 , sphinx
                 , tagsoup
                 , pandoc
                 , http-enumerator
                 , xml-types

    if !os(windows)
         build-depends: unix
