name:              yesodcms
version:           0.0.0
license:           BSD3
license-file:      LICENSE
author:            Michael Snoyman
maintainer:        Michael Snoyman
synopsis:          The greatest Yesod web application ever.
description:       I'm sure you can say something clever here if you try.
category:          Web
stability:         Experimental
cabal-version:     >= 1.8
build-type:        Simple
homepage:          http://yesodcms.yesodweb.com/

Flag dev
    Description:   Turn on development settings, like auto-reload templates.
    Default:       False

Flag library-only
    Description:   Build for use with "yesod devel"
    Default:       False

library
    hs-source-dirs: .
    exposed-modules: Application
                     Import
    other-modules:   Foundation
                     Model
                     Settings
                     Settings.StaticFiles
                     FormatHandler
                     FormatHandler.Text
                     FormatHandler.Markdown
                     FormatHandler.Html
                     FileStore
                     Handler.Root
                     Handler.Wiki
                     Handler.EditPage
                     Handler.UserFile
                     Handler.Profile
                     Handler.Page
                     Handler.Comments
                     Handler.Feed
                     Handler.Blog
                     Handler.Search
    if flag(dev) || flag(library-only)
        cpp-options:   -DDEVELOPMENT
        ghc-options:   -Wall -O0
    else
        ghc-options:   -Wall -O2 -threaded
    if os(windows)
        cpp-options: -DWINDOWS
    extensions: TemplateHaskell
                QuasiQuotes
                OverloadedStrings
                NoImplicitPrelude
                CPP
                MultiParamTypeClasses
                TypeFamilies
                GADTs
                GeneralizedNewtypeDeriving
                FlexibleContexts
                EmptyDataDecls
                NoMonomorphismRestriction
    build-depends: base         >= 4       && < 5
                 , yesod        >= 1.1     && < 1.2
                 -- , yesod-platform                >= 1.1        && < 1.2
                 , yesod-core                    >= 1.1.2      && < 1.2
                 , yesod-auth                    >= 1.1        && < 1.2
                 , yesod-static                  >= 1.1        && < 1.2
                 , yesod-default
                 , blaze-html
                 , yesod-form                    >= 1.1        && < 1.2
                 , mime-mail
                 , clientsession                 >= 0.8        && < 0.9
                 , wai-extra
                 , directory
                 , bytestring                    >= 0.9        && < 0.10
                 , text                          >= 0.11       && < 0.12
                 , persistent-template
                 , persistent                    >= 1.0        && < 1.1
                 , persistent-postgresql     >= 1.0        && < 1.1
                 , template-haskell
                 , hamlet                        >= 1.1        && < 1.2
                 , shakespeare-css               >= 1.0        && < 1.1
                 , shakespeare-js                >= 1.0        && < 1.1
                 , shakespeare-text              >= 1.0        && < 1.1
                 , hjsmin                        >= 0.1        && < 0.2
                 , transformers
                 , warp
                 , blaze-builder
                 , cmdargs
                 , containers
                 , conduit
                 , system-filepath
                 , system-fileio
                 , xss-sanitize
                 , uri-conduit
                 , xml-conduit       >= 1.0.3    && < 1.1
                 , http-types
                 , spoon
                 , zip-archive
                 , time
                 , wai
                 , aeson
                 , vector
                 , old-locale
                 , yesod-newsfeed
                 , sphinx
                 , tagsoup
                 , pandoc
                 , http-conduit                  >= 1.5        && < 1.7
                 , xml-types
                 , yaml
                 , gravatar
                 , blaze-markup
                 , data-default

    if !os(windows)
         build-depends: unix

executable         yesodcms
    if flag(library-only)
        Buildable: False

    main-is:           main.hs
    hs-source-dirs:    .
    build-depends:     base
                     , yesodcms
                     , yesod-default

    ghc-options:       -threaded -O2
test-suite test
    type:              exitcode-stdio-1.0
    main-is:           main.hs
    hs-source-dirs:    tests
    ghc-options:       -Wall

    build-depends: base
                 , yesodcms
                 , yesod-test
                 , yesod-default
                 , yesod-core
                 , persistent                    >= 1.0        && < 1.1
                 , persistent-postgresql     >= 1.0        && < 1.1
